src/test/resources/ttml/test-suite/pass/dur015-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Short empty ISDs -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="0s" end="0.15s">abcdefghij</p>
      <p begin="0.19s" end="1s">ABCDEFGHIJ</p>
      <p begin="1.04s" end="1.3s">abcdefghij</p>
      <p begin="1.34s" end="2s">ABCDEFGHIJ</p>
    </div>
  </body>
</tt>
