src/test/resources/ttml/test-suite/fail/ngbs002-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Glyph cache overrun (with glyph copy) -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <body>
    <div>
      <p begin="0s" end="1s" tts:fontSize="300%">abcdefghijklmn</p>
      <p begin="1s" end="2s" tts:fontSize="300%">bcdefghijklmnopqrstuvwxyzA</p>
    </div>
  </body>
</tt>